# masal-haritasi

./: .gitignore  AGENT_WORKFLOW.md  CODEX_BUG_REPORT_2.md  CODEX_PROMPT.md  CONTINUE_PROMPT.md  README.md  package-lock.json  package.json  plan.md  tailwind.config.js  test-debug.cjs  test-harness.cjs  test-map-resize.cjs  test-pin-position.cjs  test-pin.cjs  test-region-scoping.cjs  test-screenshot.cjs  test-zoom.cjs
design/: archive.md  design.md  table.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/archive/: ContextCollector.tsx  MapViewer.tsx  PinCreator.tsx  PinLayer.tsx  RecordDetail.tsx  SearchPalette.tsx  WorldTree.tsx
src/components/common/: CampaignManager.tsx  ConfirmDialog.tsx  NewRecordDialog.tsx  NotificationContainer.tsx  SettingsDialog.tsx  Toolbar.tsx
src/components/layout/: AppLayout.tsx  ArchiveLayout.tsx  TableLayout.tsx
src/components/table/: CharacterCard.tsx  DiceRoller.tsx  PartySummary.tsx  QuestTracker.tsx  RestButtons.tsx  SceneViewer.tsx  UsageTracker.tsx
src/hooks/: useFileSystem.ts  usePersistence.ts
src/lib/: fs.ts
src/services/: campaignService.ts
src/stores/: archiveStore.ts  campaignStore.ts  tableStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: backupUtils.ts  contextBuilder.ts  fileUtils.ts
