[package]
name = "masal-haritasi"
version = "0.1.0"
description = "Masal Haritasi - D&D Kampanya Arsivi ve Canli Oyun Masasi"
authors = ["Hawk Gaming"]
edition = "2021"

[lib]
name = "masal_haritasi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

